--- a/src/renderer/App.less
+++ b/src/renderer/App.less
@@ -1,36 +1,12 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
+.app {
+  height: 100vh;
+  width: 100vw;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  &-slider{
+    height: 100vh;
   }
-  to {
-    transform: rotate(360deg);
+  &-content{
+    height: 100vh;
   }
-}
-.App-h1 {
-  color: white;
 }
