feat:完成首页/新建项目页面

--- a/src/renderer/App.less
+++ b/src/renderer/App.less
@@ -8,5 +8,10 @@
   }
   &-content{
     height: 100vh;
+    &-init {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+    }
   }
 }
