feat:完成选择文件夹目录

--- a/src/renderer/views/Init/index.less
+++ b/src/renderer/views/Init/index.less
@@ -1,6 +1,12 @@
 .init{
   &-intro{
     border-bottom: 1px solid @c5;
+    &-img {
+      height: 60px;
+      width: 60px;
+      object-fit: contain;
+      border: 1px solid @c4;
+    }
   }
   &-name {
     width: 160px;
