feat:获取所有项目信息

--- a/src/renderer/common/styles/common.less
+++ b/src/renderer/common/styles/common.less
@@ -6,6 +6,7 @@
 * 边距 m10 代表margin:10px; mt10 代表 margin-top:10px; 以此类推 取值范围[5,60]
 * 边框 bdr1 代表宽度为1的边框 bdr1__ra4 代表圆角为4宽度为1的边框 ra取值4,6,8,10
 * 阴影 sdw 代表默认阴影 sdw_446 数值分别代表x轴偏移、y轴偏移、扩散度。 取值 446、046、006
+* 文字居中 t_center
 */
 
 // 字体大小
@@ -26,6 +27,10 @@
 }
 .t6 {
   font-size: 10px;
+}
+
+.t_center {
+  text-align: center;
 }
 
 // 字体粗细
