feat:更新项目数据详情

--- a/src/renderer/components/ProjectListItem/index.less
+++ b/src/renderer/components/ProjectListItem/index.less
@@ -5,4 +5,13 @@
     justify-content: space-between;
     align-items: center;
   }
+  &-status.success {
+    color: @status_success;
+  }
+  &-status.fail {
+    color: @status_fail;
+  }
+  &-time{
+    text-align: right;
+  }
 }
