feat:增加服务器配置

--- a/src/renderer/views/Project/index.less
+++ b/src/renderer/views/Project/index.less
@@ -3,4 +3,9 @@
     background-color: @status_fail;
     border:  @status_fail;
   }
+  .add-btn {
+    font-size: 42px;
+    color: @btn_normal;
+    cursor: pointer;
+  }
 }
