feat:删除服务器配置

--- a/src/renderer/components/ServerBar/index.less
+++ b/src/renderer/components/ServerBar/index.less
@@ -3,11 +3,11 @@
   &-status.success {
     color: @status_success;
     font-size: 32px;
-    cursor: pointer;
+    opacity: .6;
   }
   &-status.fail {
     color: @status_fail;
     font-size: 32px;
-    cursor: pointer;
+    opacity: .6;
   }
 }
